# frp

./: Cargo.toml  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: prepare-sidecar.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  events.rs  lib.rs  main.rs  state.rs
src-tauri/src/api/: config_api.rs  proxies_api.rs  runner_api.rs  settings_api.rs  versions_api.rs
src-tauri/src/domain/: active_frp.rs  config.rs  progress_payload.rs  proxy.rs  types.rs  version.rs
src-tauri/src/infra/: archive.rs  http.rs  paths.rs  store.rs
src-tauri/src/services/: config_service.rs  local_proxy.rs  runner.rs  version_service.rs  watchdog_service.rs
src/api/: _invoke.ts  config.ts  frpVersions.ts  frpc.ts
src/components/common/: FormModal.vue  XinGrid.vue
src/components/frpc/: LogPanel.vue  Toolbar.vue
src/components/proxies/: HttpProxyModal.vue  ProxyEditor.vue
src/domain/: frpVersion.ts  frpc.ts  types.ts
src/router/: index.ts
src/stores/: useConfigStore.ts  useFrpVersions.ts  useFrpcStore.ts  useProxiesStore.ts
src/styles/: global.css
src/views/: Frpc.vue  Home.vue  Proxy.vue  Server.vue  Versions.vue
watchdog/: Cargo.toml  build.rs
watchdog/src/: main.rs
watchdog/src/service/: watchdog_service.rs
