[package]
name = "frpc"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "frpc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
# 以较小的步骤编译您的二进制文件。
incremental = true

[profile.release]
# 允许 LLVM 执行更好的优化。
codegen-units = 1
# 启用链接时优化。
lto = true
# 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
opt-level = "s"
# 通过禁用 panic 处理程序来提高性能。
panic = "abort"
# 确保移除调试符号。
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.16"
tauri-plugin-store = "2"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
zip = "5.1.1"
toml = "0.9.7"
flate2 = "1.1.2"
tar = "0.4.44"
regex = "1.11.2"
futures-util = "0.3.31"
tokio = "1.47.1"
chrono = "0.4.42"
