[package]
name = "frpc"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs"

[lib]
name = "frpc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.16"
tauri-plugin-store = "2"
tauri-plugin-shell = "2.3.1"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
zip = "5.1.1"
toml = "0.9.7"
flate2 = "1.1.2"
tar = "0.4.44"
regex = "1.11.2"
futures-util = "0.3.31"
tokio = "1.47.1"
chrono = "0.4.42"
libc = "0.2"
uuid = { version = "1.18.1", features = ["v4"] }
